@startuml

package WARSZTATY.Warsztat_9_Diagramy_UML.P6_UML_Wiedza_praktyczna__Diagram_klas_i_Interfejsów__Relacje {
    class Dog {
    }

    class Heart {
        +pump(): void
    }

    class Human {
        -name: String
        -heart: Heart
        -dogs: List<Dog>

        +Human(name: String, dogs: List<Dog>)
    }

    Human --> Heart : contains
    Human --> Dog : has
}

@enduml
